# skill-retriever

./: .gitignore  ARCHITECTURE.md  NOTICE  README.md  debug_discovery.py  pyproject.toml  verify_compose.py  verify_nodeparse.py  verify_search.py
.github/workflows/: ci.yml
data/skill_seeds/: skills.json
plugin/: __init__.py  plugin.yaml
scripts/: dedup_and_archive.py  dedup_skill_names.py  enrich_quality.py  extend_tree.py  ingest_aas.py  install.sh  rebalance_flat_index.py
src/: config.py
src/skill_retriever/: __main__.py  _config_plugin.py  build_flat_index.py  cli.py  cli_compose.py  compose.py  config.py  planning_with_skills.py  scanner.py  skill_usage_logger.py  subagent_binding.py  watchdog.py
src/skill_retriever/capability_tree/: tree_10000_ship_safe.yaml
src/skill_retriever/community_skills/: LICENSES.json
src/skill_retriever/community_skills/cosmosdb-best-practices/: SKILL.md
src/skill_retriever/community_skills/drawio/references/: ._xml-format.md
src/skill_retriever/search/: searcher.py
src/skill_retriever/tree/: builder.py
tests/: conftest.py  test_new_modules.py  test_plugin.py  test_scanner.py  test_searcher.py  test_tree.py
tests/fixtures/sample_skills/devops/docker-patterns/: SKILL.md
