[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skill-retriever"
version = "0.3.0"
description = "Composer-based skill retrieval for Hermes Agent. Pre-filters capability tree to flat index, single LLM call curates dynamic skill bundles per query."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sean Oliver" }]

dependencies = [
    "litellm>=1.0.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
skill-retriever = "skill_retriever.cli_compose:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/skill_retriever", "plugin"]

[tool.hatch.build]
include = [
    "src/skill_retriever/**",
    "plugin/**",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
